# saarctf-2023

./: README.md  get_flag_ids.py
SaaSSaaSSaaSSaaS/: Dockerfile  build.sh  docker-compose.yml  install.sh
SaaSSaaSSaaSSaaS/checkers/: interface.py
SaaSSaaSSaaSSaaS/exploits/: exploit_private.py  exploit_public.py
django-bells/: Dockerfile  docker-compose.yml  install.sh
django-bells/checkers/: interface.py
django-bells/exploits/: exploit_read_db.py  exploit_timestamp.py
german-telework/: .gitignore  Dockerfile  build.sh  docker-compose.yml  install.sh
german-telework/checkers/: interface.py
german-telework/exploits/: exploit_mc_board.py  exploit_task.py  telecommunication_nogamelib.py
german-telework/gamelib/: gamelib.py  gamelogger.py
german-telework/service/messagecrypt/: .gitignore  CMakeLists.txt
german-telework/service/messagecrypt/src/: base64.hh  conn_handler.cc  conn_handler.hh  keystore.hh  magenta.cc  magenta.hh  server.cc  telework_types.cc  telework_types.hh  transport_crypt.cc  transport_crypt.hh
pasteable/: Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
pasteable/checkers/: interface.py
pasteable/exploits/: exploit_bad_randomness.py  exploit_login_different_username.py  exploit_login_strcmp.py  exploit_ntp_cmdi.py  php_mt19937.py
redis-bbq/: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  install.sh
turing-machines/: .gitignore  Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
turing-machines/service/turingcode/: CMakeLists.txt  main.cpp  turingmachine.h
(+199 files in other folders)
